# QUICKSHEET-AI-CHEATSHEET-

./: .env.example  .gitignore  BACKEND.md  Dockerfile  README.md  change_author.ps1  index.html  package-lock.json  package.json  render.yaml  requirements.txt  tailwind.config.ts  test_rag_pipeline.py  test_serialization.py  vercel.json  vite.config.ts
app/: config.py  main.py
app/routes/: chat.py  cheatsheet.py  history.py  rag.py
app/schemas/: chat.py  rag.py
app/services/: chat_llm_service.py  chunker.py  document_loader.py  embedding_service.py  llm_service.py  prompt_builder.py  rag_pipeline.py  supabase_client.py  text_cleaner.py  text_extractor.py  vector_store.py
app/utils/: auth.py  download_model.py  metrics.py
intellisheet-ai/: README.md  pyproject.toml  render.yaml  requirements.txt
intellisheet-ai/src/: main.py
intellisheet-ai/src/api/v1/: router.py
intellisheet-ai/src/api/v1/endpoints/: rag.py
intellisheet-ai/src/core/: config.py  logging.py
intellisheet-ai/src/schemas/: rag.py
intellisheet-ai/src/services/: chunker.py  document_loader.py  embedding_service.py  rag_pipeline.py  vector_store.py
intellisheet-ai/tests/: test_health.py
src/: App.tsx  index.css
src/components/: ChatPanel.tsx  CompressionStats.tsx  ExportOptions.tsx  FlashcardView.tsx  Footer.tsx  HeroSection.tsx  HistorySidebar.tsx  Navbar.tsx  OptionsSection.tsx  OutputSection.tsx  ProgressBar.tsx  UploadSection.tsx
src/data/: mockData.ts
src/lib/: auth.ts
src/pages/: Index.tsx  Login.tsx
src/types/: chat.ts  cheatsheet.ts
